automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,4 +1,3 @@
-<!-- <h1><%= @name%></h1>
-  <h2><%= @breed%></h2>
-  <h3><%= @age%></h3>
-   -->
+<h1><%= Puppy Name: @name%></h1>
+  <h2><%= Breed: @breed%></h2>
+  <h3><%= Age: @age%></h3>
