--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,3 +1,4 @@
-<h1><%= Puppy Name: @name%></h1>
-  <h2><%= Breed: @breed%></h2>
-  <h3><%= Age: @age%></h3>
+<h1>Puppy Name:<%= @name%></h1>
+  <h2>Puppy Breed:<%= @breed%></h2>
+  <h3>Puppy Age:<%= @age%></h3>
+  
