automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,3 +1,5 @@
-<h1>"Puppy Name:<%= @name"%></h1>
+<body 
+  <h1>"Puppy Name:<%= @name"%></h1>
   <h2>"Puppy Breed:<%= @breed"%></h2>
   <h3>"Puppy Age:<%= @age"%></h3>
+body>
