automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,5 +1,4 @@
-<body
-  <h1>"Puppy Name:<%= @name"%></h1>
-  <h2>"Puppy Breed:<%= @breed"%></h2>
-  <h3>"Puppy Age:<%= @age"%></h3>
-body>
+
+  <h1>Puppy Name:<%= @name%></h1>
+  <h2>Puppy Breed:<%= @breed%></h2>
+  <h3>Puppy Age:<%= @age%></h3>
