automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,6 +1,6 @@
 <h1>Puppy Adoption</h1>
 <a href=/welcome>"Click Here To List A Puppy"></a>
-<form method="POST" action="/new">
+<form method="POST" action="/">
   <p>Puppy's Name: <input type="text" name="name"></p>
   <p>Puppy's Breed: <input type="text" name="breed"></p>
   <p>Puppy's Age: <input type="text" name="age"></p>
